# DiskDelta

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build.bat  build_mingw.bat  build_simple.bat
src/: diff_engine.cpp  diff_engine.h  http_server.cpp  http_server.h  main.cpp  mft_reader.cpp  mft_reader.h
tools/: mft_dump.cpp
web/: index.html
